[package]
name = "rust-boobs"
version = "0.1.0"
authors = ["Sophie 'Sharky' Schumann <sharky@sharky.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8.1"
gio = "0.8.1"
glib = "0.9.3"
json = "0.12.4"
gdk-pixbuf = "0.8.0"
bytes = "0.5.4"

[dependencies.reqwest]
version = "0.10.4"
features = ["blocking"]